--- a/Romanian/main/SecurityAdd.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityAdd.apk/res/values-ro/strings.xml
@@ -1,10 +1,39 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+    <string name="add_game">Adăugați un joc</string>
+    <string name="anti_disturb_msg_detail">Dezactivați toate notificările, cu excepția apelurilor primite</string>
+    <string name="anti_disturb_msg_title">Nu deranjați</string>
     <string name="app_name">Extensie serviciu de securitate</string>
     <string name="app_not_installed_toast">"Aplicația nu este instalată pe dispozitiv."</string>
+    <string name="application_item_already_permission">Permisă</string>
+    <string name="application_item_disable">Restricționată</string>
+    <string name="auto_import_games">Mențineți toate jocurile într-un singur loc</string>
+    <string name="booster_suc">Viteza a fost crescută cu succes</string>
+    <string name="boostering">Se crește viteza…</string>
     <string name="cancel_button">Renunță</string>
+    <string name="close">Închideți</string>
+    <string name="dont_bore">"Evitați ca butoanele și notificările să vă distragă atenția"</string>
     <string name="empty">" "</string>
+    <string name="game_booster">Creștere a vitezei în jocuri</string>
+    <string name="game_booster_intro">Despre crșterea vitezei în jocuri</string>
+  <string name="game_booster_total">Boosted speed %1$s time, added %2$s of gaming time</string>
+    <string name="game_more_improve">Restricționați activitățile din fundal și viteza de descărcare pentru a economisi acumulatorul și lățimea de bandă pentru jocuri</string>
+    <string name="game_setting">Setări jocuri</string>
+    <string name="gs_app_back_self_start">Economisire acumulator</string>
+    <string name="gs_dialog_confirm_close_msg">Scurtătura va fi eliminată de pe ecranul principal. Accesați Securitate-Setări pentru a o restaura.</string>
+    <string name="gs_dialog_confirm_close_title">Dezactivați</string>
+    <string name="gs_game_duration">Timp</string>
+    <string name="gs_game_net_priority">Prioritate conexiune</string>
+    <string name="gs_game_net_priority_detail">Limitați viteza de descărcare pentru a avea o lățime de bandă suficientă pentru a putea juca</string>
+    <string name="gs_game_performance">Performanță</string>
+    <string name="gs_only_self_start_for_list">Restricționați procesele din fundal pentru a economisi acumulator necesar jocurilor</string>
+    <string name="gs_open_game_booster">Creștere viteză</string>
+    <string name="gs_performance_mode">Mod Performanță</string>
+    <string name="gs_performance_mode_detail">Creșteți utilizarea procesorului pentru a asigura o performanță crescută</string>
+    <string name="install_game_count">Au fost adăugate %d jocuri</string>
+    <string name="loading">Doar o secundă…</string>
     <string name="main_toolbar_purchase">Adăugați</string>
+    <string name="man_add_application">Adăugați manual aplicațiile cu pornire automată</string>
     <string name="miuishare_title_more">Mai multe</string>
     <string name="miuishare_title_share">Partajați</string>
     <string name="miuishare_wechat_timeline_title">Momente WeChat</string>
@@ -30,11 +59,23 @@
     <string name="no_network_btn">Încercați din nou</string>
     <string name="ok_button">OK</string>
     <string name="open_browser">Deschideți în browser</string>
+    <string name="other">Alte setări</string>
     <string name="pc_activity_title">Optimizare utilizare acumulator</string>
     <string name="pm_lable_name">Despre accesul root</string>
+    <string name="power_autorun_apps_empty">Nicio aplicație cu pornire automată</string>
     <string name="privacy_declare_dialog_title">Termenii serviciului</string>
     <string name="privacy_prompt_traffic_purchase_message">"Numărul dumneavoastră de telefon și detaliile despre operator vor fi criptate și trimise la serverele Mi pentru a obține mai multe informații despre opțiunile de achiții de date."</string>
+    <string name="release_memory">Goliți memoria cache</string>
+    <string name="scan_installed_games">Se verifică jocurile instalate…</string>
+    <string name="setting">Setări</string>
     <string name="share">Partajați</string>
+    <string name="shield_keyboard_detail">Atingeți de două ori butoanele pentru a le reactiva</string>
+    <string name="shield_keyboard_title">Dezactivați butoanele</string>
+    <string name="start">Start</string>
+    <string name="start_game">Start</string>
+    <string name="support_game_booster_tips">Creșteți viteza și îmbunătățiți experiența de joc</string>
     <string name="title_share_link">Partajați legătura web</string>
+    <string name="top_game">Jocuri de top</string>
+    <string name="uninstall_game_count">"Nu au fost adăugate %d jocuri"</string>
     <string name="usage_sorted_loading_text">Doar o secundă…</string>
 </resources>
