--- a/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
+++ b/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
@@ -26,6 +26,10 @@
     <string name="app_name_miuiringtone">Tonuri de apel</string>
     <string name="app_name_miuiwallpaper">Imagini de fundal</string>
     <string name="app_name_screenshot">Capturi de ecran</string>
+    <string name="auto_play">Rulează în mod automat atunci când sunteți conectat la Wi-Fi</string>
+    <string name="auto_play_later">Mai târziu</string>
+    <string name="auto_play_now">Activați</string>
+    <string name="auto_play_toast">Videoclipurile vor rula în mod automat. Puteți modifica acest lucru din setări.</string>
     <string name="backup_cancel">Nu, mulţumesc</string>
     <string name="backup_checkbox_msg">Crează copie de rezervă în mod automat</string>
     <string name="backup_confirm">Creare copie de rezervă</string>
@@ -76,6 +80,20 @@
     <string name="change_sticker">Alegeți alt sticker</string>
     <string name="choose_report_comment_reason">De ce raportați acest comentariu?</string>
     <string name="choose_report_reason">De ce raportați acest videoclip?</string>
+    <string name="claim_no_video">Niciun videoclip de raportat</string>
+    <string name="claim_operation_too_frequently">Prea multe încercări! Încercați din nou mai târziu.</string>
+    <string name="claim_remind_dialog_cancel">Vedeți alte videoclipuri</string>
+  <string name="claim_remind_dialog_confirm">Stay</string>
+    <string name="claim_remind_dialog_message">"Nu veți mai putea raporta acest videoclip dacă vă întoarceți"</string>
+    <string name="claim_remind_dialog_title">Atenție</string>
+    <string name="claim_video">Raportați</string>
+    <string name="claim_video_already_claimed">Acest videoclip a fost raportat deja; data viitoare încercați să fiți mai rapid!</string>
+    <string name="claim_video_already_locked">Raportat</string>
+    <string name="claim_video_failure">"Nu s-a putut raporta, încercați din nou"</string>
+    <string name="claim_video_locking">Raportare…</string>
+    <string name="claim_video_over">Prea multe raportări pentru azi, reveniți mâine!</string>
+    <string name="claim_video_success">Raportat cu succes</string>
+    <string name="claim_video_unlogin">Conectați-vă pentru a raporta videoclipuri</string>
     <string name="clean_hint">Apăsaţi pentru a elibera spațiu</string>
     <string name="click_to_switch_volume">Apăsați aici pentru a comuta între memoria internă și cardul SD</string>
     <string name="click_to_switch_volume_pad">Atingeți pentru a comuta între memoria internă și cardul SD</string>
@@ -224,6 +242,7 @@
     <string name="interest_recommend">Videoclipuri recomandate</string>
     <string name="just_now">acum</string>
     <string name="kilobyteShort">KB</string>
+    <string name="kuaipan_label">Kuaipan</string>
     <string name="like_toast_1">Asemenea videoclipuri vă vor fi recomandate mai des.</string>
     <string name="like_toast_2">Vizualizați videoclipurile pe care le-ați apreciat.</string>
     <string name="like_toast_3">Conectați-vă pentru a vizualiza videoclipurile pe care le-ați apreciat.</string>
@@ -276,7 +295,6 @@
     <string name="mobile_network_dialog_cancle">Renunțați</string>
     <string name="mobile_network_dialog_confirm">OK</string>
     <string name="mobile_network_dialog_tip">Utilizarea datelor mobile pentru vizionarea de videoclipuri poate genera costuri ridicate.</string>
-    <string name="mobile_network_dialog_tip2">"Utilizați datele mobile pentru a viziona videoclipuri online. Acest lucru poate genera costuri ridicate."</string>
     <string name="mobile_network_dialog_title">Avertizare utilizare date mobile</string>
     <string name="month_day_format">dd MMMM</string>
     <string name="move_failed">"Mutare eşuată"</string>
@@ -302,6 +320,7 @@
     <string name="no_enough_storage_title">Spaţiu insuficient</string>
     <string name="no_file">Gol</string>
     <string name="no_login_btn_text">Conectați-vă</string>
+    <string name="no_login_str">Nu sunteți conectat</string>
     <string name="no_message">Niciun mesaj</string>
     <string name="no_new_content_tip">Toate elementele sunt actualizate</string>
     <string name="no_recent_files">Niciun fişier recent</string>
@@ -362,6 +381,11 @@
     <string name="operation_show_sys">Se afişează fişierele ascunse</string>
     <string name="operation_unfavorite">Eliminaţi din favorite</string>
     <string name="origin_name">%1$s: </string>
+    <string name="original_user_qq_group">Alăturați-vă grupului Talent team QQ</string>
+    <string name="original_user_register">• &lt;font color=#fc7050&gt;%1$s&lt;/font&gt; s-au alăturat comunității</string>
+    <string name="original_user_signal">Talent team</string>
+    <string name="original_user_title">Felicitări pentru că ați devenit membru al echipei Talent team!</string>
+    <string name="original_user_verify">• Vă mulțumim pentru că sunteți alături de noi!</string>
     <string name="other_user_fans_tab">Fani</string>
     <string name="other_user_follow_tab">Urmăritori</string>
     <string name="other_user_liked_topic_tip">Niciun subiect</string>
@@ -429,6 +453,8 @@
     <string name="rename_failed">Nu se poate redenumi %1$s</string>
     <string name="repair_done">Restaurate</string>
     <string name="repair_error">"Nu s-au putut restaura"</string>
+    <string name="repair_error_no_media">"Nu s-a putut restaura, selectați cel puțin un fișier media."</string>
+    <string name="repair_error_no_order">"Nu s-a putut restaura, ștergeți sau decriptați %s și reîncercați"</string>
     <string name="repair_file">Restaurați fișierele criptate</string>
     <string name="reply_success">Comentariul a fost postat.</string>
     <string name="report_abuse">Abuz</string>
@@ -519,13 +545,16 @@
     <string name="swap_tip_2">pentru a vedea alte videoclipuri</string>
     <string name="sys_size_enable">" disponibil"</string>
     <string name="tab_category">Categorii</string>
+    <string name="tab_claim">Raportare</string>
     <string name="tab_common_app">Aplicații și dosare</string>
+    <string name="tab_discover">Descoperiți</string>
     <string name="tab_follow">Urmărire</string>
+    <string name="tab_homepage">Acasă</string>
     <string name="tab_hottest_video">Populare</string>
     <string name="tab_local">LOCAL</string>
+    <string name="tab_mine">Profil</string>
     <string name="tab_more">Mai multe</string>
     <string name="tab_newest_video">Noutăți</string>
-    <string name="tab_profile">Profil</string>
     <string name="tab_ranking_list">Lista de evaluări</string>
     <string name="tab_source">APLICAŢII</string>
     <string name="terabyteShort">TB</string>
@@ -541,7 +570,7 @@
     <string name="tools">INSTRUMENTE</string>
     <string name="topic_follow">Urmăriți</string>
     <string name="topic_followed">Urmărit</string>
-    <string name="topic_message">%1$s: %2$s</string>
+    <string name="topic_message">&lt;font color=#fc7050&gt;%1$s: &lt;/font&gt;%2$s</string>
     <string name="topic_winners">Câștigatorii anteriori</string>
     <string name="transfer_done">Fișierele au fost mutate.</string>
     <string name="transfer_private_data">Se transferă dosarele ascunse de pe cardul SD…</string>
@@ -646,6 +675,14 @@
     <string name="video_data_consumption_dialog_message">Pentru încărcare se vor folosi %1$s date mobile</string>
     <string name="video_data_consumption_dialog_title">Avertisment utilizare date mobile</string>
     <string name="video_description">Descriere videoclip</string>
+    <string name="video_encrypt_fans_btn">Deveniți fan</string>
+    <string name="video_encrypt_fans_text">Doar fanii pot urmări acest videoclip</string>
+    <string name="video_encrypt_follow_fail">"Nu s-a putut urmări"</string>
+    <string name="video_encrypt_follow_success">Urmărit %s</string>
+    <string name="video_encrypt_login_btn">Conectați-vă</string>
+    <string name="video_encrypt_login_text">Conectați-vă pentru a vedea acest videoclip</string>
+    <string name="video_operation_need_fans">Urmăriți persoana care a creat acest videoclip pentru a face asta</string>
+    <string name="video_operation_need_login">Conectați-vă pentru a face asta</string>
     <string name="video_parse_btn">Start</string>
     <string name="video_parse_error_unknown">"Acest link nu este suportat; încercați cu un altul"</string>
     <string name="video_parse_hint">Servicii suportate: WeChat, Weibo, Youku.</string>
@@ -665,7 +702,6 @@
     <string name="video_topic_hint">Căutare</string>
     <string name="video_upload_btn">Următorul</string>
     <string name="video_upload_btn_hint">Videoclipurile în format mp4 trebuie să aibă între 3 sec. și 10 min. lungime</string>
-    <string name="video_upload_hint">Încărcați videoclipuri promovate pentru a obține mai multe puncte.</string>
     <string name="video_upload_item_more">Mai multe (%1$s)</string>
     <string name="video_upload_item_title">%1$s (%2$s)</string>
     <string name="video_upload_kuaishou_hint">Încărcați videoclipuri KuaiShou pentru a câștiga mai mulți fani.</string>
@@ -703,5 +739,4 @@ Urmăriți împreună cu 170 de milioane de fani Mi."</string>
 aplicație menită să vă aducă mai multă distracție!"</string>
     <string name="youliao_dialog_title">Nu vă interesează videoclipurile?</string>
     <string name="zero">0</string>
-    <string name="zero_comment">Niciun comentariu</string>
 </resources>
