--- a/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
@@ -77,6 +77,7 @@
     <string name="alert_secret_album_enter">Am înțeles</string>
     <string name="alert_secret_album_message">Glisați în jos din partea superioară a paginii Albume pentru a vedea albumul secret.</string>
     <string name="alert_secret_album_title">Vizualizare album secret</string>
+    <string name="all_items_synced">Toate albumele au fost sincronizate în Mi Cloud</string>
     <string name="all_video_album_display_name">Toate videoclipurile</string>
     <string name="already_create_baby_album">Albumul copilului există deja în Mi Cloud.</string>
     <string name="app_name">Galerie</string>
@@ -211,6 +212,7 @@
     <string name="delete_from_devices">De pe toate dispozitivele cu sincronizare automată</string>
     <string name="delete_from_devices_album">De pe toate dispozitivele pe care s-a sincronizat acest album</string>
     <string name="delete_from_homepage_album">Din albumele din Galerie</string>
+    <string name="delete_from_this_album_and_cloud">din acest album și din Mi Cloud</string>
     <string name="delete_from_web">Albumele Web</string>
     <string name="delete_in_album">Când veți șterge fotografii sau un videoclipuri dintr-un album, ele vor fi șterse și din:</string>
     <string name="delete_in_home_page">Când veți șterge fotografii sau videoclipuri din Galerie, ele vor fi șterse și din:</string>
@@ -419,7 +421,6 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="not_is">Nu</string>
     <string name="not_remind_again">"Nu arăta din nou"</string>
     <string name="not_remind_any_more">Nu se afişează din nou</string>
-    <string name="number_of_uploading_finish">Albumele au fost salvate în mod automat</string>
     <string name="open">Activaţi</string>
     <string name="open_public_message">Generaţi un URL pentru a-l distribui prietenilor</string>
     <string name="open_public_title">Distribuiţi public</string>
@@ -467,6 +468,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="petabyteShort">PB</string>
     <string name="photo">Fotografii</string>
     <string name="photo_edit_file_not_exits_tip">Descărcați mai întâi fotografia pentru a o putea edita</string>
+    <string name="photo_editor_label">Editați</string>
     <string name="photo_editor_saving">Se salvează...</string>
     <string name="photo_page_save_uri_image_fail">"Nu s-a putut salva în Galerie"</string>
     <string name="photo_page_save_uri_image_ok">Fotografia a fost salvată în Galerie</string>
